fix: Align theme switcher and make buttons clickable

--- a/style.css
+++ b/style.css
@@ -951,8 +951,10 @@ footer {
 .switcher {
   position: fixed;
   z-index: 1001;
-  top: 80px;  left: 50%;
-  translate: -50%;
+  top: 80px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -961,7 +963,6 @@ footer {
   height: 70px;
   box-sizing: border-box;
   padding: 8px 12px 10px;
-  margin: 0 auto;
   border: none;
   border-radius: 99em;
   font-size: var(--fz);
@@ -984,6 +985,7 @@ footer {
       cubic-bezier(1, 0.0, 0.4, 1),
     box-shadow 400ms
       cubic-bezier(1, 0.0, 0.4, 1);
+  pointer-events: none;
 }
 
 .switcher__legend {
@@ -1034,6 +1036,7 @@ footer {
   border-radius: 99em;
   opacity: 1;
   transition: all 160ms;
+  pointer-events: auto;
 }
 
 .switcher__option:hover {
